@@ -1,3 +1,10 @@
+2011-09-18  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* fileio.c: Report proper errno when syscall falls.
+	(Finsert_file_contents): Save and restore errno,
+	so that report_file_error outputs the correct diagnostic.
+	(Fwrite_region) [CLASH_DETECTION]: Likewise.
+
 2011-09-18  Eli Zaretskii  <eliz@gnu.org>
 
 	* .gdbinit (pgx): Fix references to fields of `struct glyph'.
